atualizações feitas na caixa-cinco

--- a/projeto final.css
+++ b/projeto final.css
@@ -85,14 +85,15 @@
 
 .menu-dois {
 	list-style: none;
-	font-size: 3em;
-	font-family: Roboto;
-	color: #000000;
-	width: 80vw;
-	height: 80vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+    font-size: 3.2em;
+    font-family: Roboto;
+    color: #000000;
+    width: 80vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .item-menu-um {
@@ -224,7 +225,7 @@
 .caixa-cinco {
 	background-color: #00C733;
 	width: 100vw;
-    height: 100vh;
+    height: 80vh;
     display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -255,7 +256,7 @@
 
 .texto-tres {
 	width: 80vw;
-	height: 18vh;
+	height: 8vh;
 	font-size: 3em;
 	font-family: Roboto;
 	color: #FFFFFF;
@@ -263,7 +264,7 @@
 
 .texto-quatro {
 	width: 80vw;
-	height: 18vh;
+	height: 8vh;
 	font-size: 3em;
 	font-family: Roboto;
 	color: #FFFFFF;
@@ -271,7 +272,15 @@
 
 .texto-cinco {
 	width: 80vw;
-	height: 18vh;
+	height: 8vh;
+	font-size: 3em;
+	font-family: Roboto;
+	color: #FFFFFF;
+}
+
+.texto-seis {
+	width: 80vw;
+	height: 8vh;
 	font-size: 3em;
 	font-family: Roboto;
 	color: #FFFFFF;
