--- a/projeto final.css
+++ b/projeto final.css
@@ -6,6 +6,7 @@
 
 .conteiner-menu {
 	height: 1vh;
+	background-image: url(./assets/topo.svg);
 }
 
 .conteiner-foto {
@@ -15,7 +16,7 @@
 
 .logo-principal {
 	width: 50vw;
-	height: 20vh;
+	height: 17vh;
 }
 
 .conteiner-navegação {
@@ -46,6 +47,8 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-around;
+    background-image: url(./assets/fundo.png);
+    background-position: center;
 }
 
 .texto-apresentação {
@@ -170,16 +173,21 @@
 	background-color: #FFFFFF;
 	border-radius: 2em;
 	box-shadow: 0em 0.2em 0.5em #A9A9A9;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .foto-impacto {
-
+	width: 87vw;
+	height: 23.6vh;
+	border-radius: 1.6em;
 }
 
 .box-parceria {
 	width: 100vw;
     height: 90vh;
-    display: flex;
+   	display: flex;
 	align-items: center;
 	flex-direction: column;
 	justify-content: space-around;
@@ -195,28 +203,38 @@
 	align-items: center;
 }
 
-.image-sesc {
+.menu-parceria {
+	width: 80vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+}
 
+.image-sesc {
+	width: 12vh;
 }
 
 .image-quintal {
-
+	width: 12vh;
 }
 
 .image-radio {
-
+	width: 12vh;
 }
 
 .image-samba {
-
+	width: 12vh;
 }
 
 .image-assossiação {
-
+	width: 12vh;
 }
 
 .image-hashi {
-
+	width: 12vh;
 }
 
 .text-assossiação {
